// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar user logged in snapshot 1`] = `
<DocumentFragment>
  <nav
    class="container"
  >
    <ul>
      <li>
        <a
          href="/"
        >
          <h1>
            Next-Sound
          </h1>
        </a>
      </li>
      <li
        class=" link"
      >
        <a
          href="/"
        >
          <img
            alt="home"
            data-nimg="1"
            decoding="async"
            height="30"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=64&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=64&q=75 2x"
            style="color: transparent;"
            width="30"
          />
          <span>
            Home
          </span>
        </a>
      </li>
      <li>
        <form
          aria-label="form"
          class="search"
        >
          <input
            placeholder="Search"
            type="text"
          />
          <button
            type="submit"
          >
            <img
              alt="search"
              data-nimg="1"
              decoding="async"
              height="15"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=32&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=16&q=75 1x, /_next/image?url=%2Fimg.jpg&w=32&q=75 2x"
              style="color: transparent;"
              width="15"
            />
          </button>
        </form>
      </li>
      <li
        class=" link"
      >
        <a
          href="/profile/test-name"
        >
          <img
            alt="profile"
            data-nimg="1"
            decoding="async"
            height="30"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=64&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=64&q=75 2x"
            style="color: transparent;"
            width="30"
          />
          <span>
            Profile
          </span>
        </a>
      </li>
      <li
        class=" link"
      >
        <a
          href="/upload"
        >
          <img
            alt="upload"
            data-nimg="1"
            decoding="async"
            height="30"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=64&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=64&q=75 2x"
            style="color: transparent;"
            width="30"
          />
          <span>
            Upload
          </span>
        </a>
      </li>
      <li
        class=" link"
      >
        <a
          href="/logout"
        >
          <img
            alt="logout"
            data-nimg="1"
            decoding="async"
            height="30"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=64&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=64&q=75 2x"
            style="color: transparent;"
            width="30"
          />
          <span>
            Logout
          </span>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`NavBar user logged out snapshot 1`] = `
<DocumentFragment>
  <nav
    class="container"
  >
    <ul>
      <li>
        <a
          href="/"
        >
          <h1>
            Next-Sound
          </h1>
        </a>
      </li>
      <li
        class=" link"
      >
        <a
          href="/"
        >
          <img
            alt="home"
            data-nimg="1"
            decoding="async"
            height="30"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=64&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=64&q=75 2x"
            style="color: transparent;"
            width="30"
          />
          <span>
            Home
          </span>
        </a>
      </li>
      <li>
        <form
          aria-label="form"
          class="search"
        >
          <input
            placeholder="Search"
            type="text"
          />
          <button
            type="submit"
          >
            <img
              alt="search"
              data-nimg="1"
              decoding="async"
              height="15"
              loading="lazy"
              src="/_next/image?url=%2Fimg.jpg&w=32&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=16&q=75 1x, /_next/image?url=%2Fimg.jpg&w=32&q=75 2x"
              style="color: transparent;"
              width="15"
            />
          </button>
        </form>
      </li>
      <li
        class=" link"
      >
        <a
          href="/login"
        >
          <img
            alt="login"
            data-nimg="1"
            decoding="async"
            height="30"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=64&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=64&q=75 2x"
            style="color: transparent;"
            width="30"
          />
          <span>
            Login
          </span>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
